Implement {{!-- --}} comments allowing handlebars in comment

--- a/test/fixtures/templates/comment.html
+++ b/test/fixtures/templates/comment.html
@@ -5,4 +5,8 @@
   <div>
     <div class="foo {{! A FOO THING! }}"></div>
   </div>
+  {{!--}}
+  {{!--
+    {{omg_handlebars_in_comment}}
+  --}}
 </html>
