Allow lookup in root context

--- a/test/fixtures/templates/parent-context.html
+++ b/test/fixtures/templates/parent-context.html
@@ -2,7 +2,7 @@
 <div>
   <ul>
     {{#each subitems}}
-    <li>{{!--{../../book.name}--}}{{../author.name}} {{../timestamp}} - {{name}}</li>
+    <li>{{../../book.name}} {{../author.name}} {{../timestamp}} - {{name}}</li>
     {{/each}}
   </ul>
 </div>
